<resources>

    <string-array name="Option">
        <item>ADD NEW EVENT</item>
        <item>JOIN EVENT</item>
    </string-array>


    <string name="app_name">SplitBill</string>
    //fb used
    <string name="facebook_app_id">291524491512980</string>
    <string name="fb_login_protocol_scheme">fb291524491512980</string>


    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>


    <string name="join_event">JOIN EVENT</string>
    <string name="add_event">ADD EVENT</string>
    <string name="event_name">EVENT NAME</string>
    <string name="description">DESCRIPTION</string>
    <string name="currency">CURRENCY</string>
    <string name="tabItemExpense">EXPENSES</string>
    <string name="tabItemBalance">BALANCES</string>
    <string name="inputTextHintExpenseName">EXPENSE NAME</string>
    <string name="inputTextHintExpenseAmount">EXPENSE AMOUNT</string>
    <string name="paid_by">PAID BY:-</string>
    <string name="paid_for">PAID FOR:-</string>
    <string name="button_add_expense">ADD EXPENSE</string>
    <string name="inputTextHintEventDescription">EVENT DESCRIPTION</string>
    <string name="button_add_participants">ADD PARTICIPANTS</string>
    <string name="textView_select_currency">SELECT CURRENCY</string>
    <string name="buttonChChooseCurrencyDefaultCurrency">INR</string>
    <string name="button_add">ADD</string>
    <string name="add_participants">ADD PARTICIPANTS</string>
    <string name="select_currency">SELECT CURRENCY</string>
    <string name="button_save">SAVE</string>
    <string name="total_expenses">TOTAL EXPENSES</string>
    <string name="_0_00">0.00</string>
    <string name="my_total">MY TOTAL</string>
    <string name="event_id">EVENT ID</string>
    <string name="button_join">JOIN</string>
    <string name="verify">VERIFY</string>
    <string name="this_will_help_you_share_the_data_between_the_other_participants">This will help you share the data between the other participants.</string>
    <string name="InputTextHintPhone">PHONE</string>
    <string name="inputTextHintEventName">EVENT NAME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
