<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Expense.EditExpenseFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextExpenseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputTextHintExpenseName"
                android:inputType="textPersonName" />

            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout1"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputTextHintExpenseAmount"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paid_by"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/paidByMeSwitchButton"
                android:text="ME" />

            <Switch
                android:id="@+id/paidByMeSwitchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checked="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/paidByLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="8dp"
            android:orientation="vertical" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paidByLinearLayout"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paid_for"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/paidForAllSwitchButton"
                android:text="PAID FOR ALL" />

            <Switch
                android:id="@+id/paidForAllSwitchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checked="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/paidForLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginTop="8dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/buttonAddExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paidForLinearLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="Update"
            android:textAlignment="center" />
    </RelativeLayout>
</ScrollView>